compiler/testData/diagnostics/tests/collectionLiterals/kt34515.fir.kt
// RUN_PIPELINE_TILL: SOURCE
fun main() {
    <!UNSUPPORTED!>[]<!><!UNNECESSARY_NOT_NULL_ASSERTION!>!!<!><!UNNECESSARY_NOT_NULL_ASSERTION!>!!<!>
}
